[project]
name = "neonorgdb"
version = "0.1.0"
description = "MCP server for Neon DB organization-level API queries"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = ["neon", "postgresql", "mcp", "api", "database"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.28.1",
    "fastmcp>=2.5.0",
]

[project.scripts]
neonorgdb = "main:main"

[project.urls]
Homepage = "https://github.com/yourusername/neonorgdb"
Repository = "https://github.com/yourusername/neonorgdb"
Documentation = "https://github.com/yourusername/neonorgdb#readme"
Issues = "https://github.com/yourusername/neonorgdb/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["neonorgdb.py", "main.py"]
